# twitter-types

./: .gitignore  .travis.yml  README.md  cabal.project  stack-lts-2.yml  stack-lts-3.yml  stack.yaml  twitter-types.cabal
.github/workflows/: format.yml  haskell.yml
.travis/: copy_stack_dist.sh  stack-lts-2.yaml  stack-lts-3.yaml  stack-lts-5-aeson11.yaml  stack-lts-5.yaml  stack-lts-6.yaml
Web/Twitter/: Types.hs
Web/Twitter/Types/: Lens.hs  TH.hs
Web/Twitter/Types/Lens/: TH.hs  Types.hs
attic/: check-sdist.sh  genCode.hs  platformObject.hs  tweets.xml  users.xml
tests/: Fixtures.hs  TypesTest.hs
tests/fixtures/: delete.json  direct_message_thimura.json  error_not_authorized.json  event_favorite_thimura.json  status_object_with_entity.json
twitter-types/: README.md  twitter-types.cabal
twitter-types-lens/: LICENSE  README.md  twitter-types-lens.cabal
twitter-types-lens/Web/Twitter/Types/: Lens.hs
twitter-types-lens/Web/Twitter/Types/Lens/: TH.hs
twitter-types/Web/Twitter/: Types.hs
twitter-types/Web/Twitter/Types/: Lens.hs
twitter-types/Web/Twitter/Types/Lens/: Types.hs
twitter-types/tests/: Fixtures.hs  Instances.hs  PropFromToJSONTest.hs  StatusTest.hs  TypesTest.hs  spec_main.hs
twitter-types/tests/fixtures/: direct_message_event_list.json  entity01.json  event_unfavorite_thimura.json  list_thimura_haskell.json  media_entity.json  media_extended_entity.json  search_haskell.json  status01.json  status_quoted.json  status_thimura_with_photo.json  user_thimura.json  user_thimura_lang_null.json
twitter-types/tests/fixtures/tweet-updates/: README.md  compatibility_classic_13995_extended.json
