name:              twitter-types
version:           0.1.20130101
license:           BSD3
license-file:      LICENSE
author:            Takahiro HIMURA
maintainer:        Takahiro HIMURA <taka@himura.jp>
synopsis:          Twitter JSON parser and types
description:       This package uses enumerator package for access Twitter API.
category:          Web, Enumerator
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          https://github.com/himura/twitter-types

source-repository head
  type: git
  location: git://github.com/himura/twitter-types.git

library
  ghc-options: -Wall

  build-depends:
      base >= 4 && < 5
    , http-types
    , aeson >= 0.3.2.2
    , bytestring
    , text
    , unordered-containers

  exposed-modules:
    Web.Twitter.Types
    Web.Twitter.Types.Lens

test-suite tests
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests, .
  main-is:           TypesTest.hs
  build-depends:
      base >= 4.0 && < 5
    , template-haskell
    , test-framework >= 0.3.3
    , test-framework-th-prime
    , test-framework-hunit
    , HUnit
    , shakespeare-text
    , http-types
    , aeson
    , attoparsec
    , bytestring
    , text
    , unordered-containers

  ghc-options:       -Wall
