name:                twitter-types-lens
version:             0.10.0
synopsis:            Twitter JSON types (lens powered)
description:         Please see the README on Github at <https://github.com/himura/twitter-types#readme>
homepage:            https://github.com/himura/twitter-types
license:             BSD3
license-file:        LICENSE
author:              Takahiro HIMURA
maintainer:          taka@himura.jp
category:            Web
build-type:          Simple
cabal-version:       >=1.10

tested-with:         GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5

source-repository head
  type: git
  location: git://github.com/himura/twitter-types.git

library
  ghc-options: -Wall

  exposed-modules:
    Web.Twitter.Types.Lens
  other-modules:
    Web.Twitter.Types.Lens.TH

  build-depends:
      base >= 4 && < 5
    , lens >= 4.0 && < 5
    , template-haskell
    , text
    , time
    , twitter-types >= 0.10 && < 0.11

  default-language:    Haskell2010
