name:                twitter-types-lens
version:             0.10.1
synopsis:            Twitter JSON types (lens powered)
description:         Please see the README on Github at <https://github.com/himura/twitter-types#readme>
homepage:            https://github.com/himura/twitter-types
license:             BSD3
license-file:        LICENSE
author:              Takahiro HIMURA
maintainer:          taka@himura.jp
category:            Web
build-type:          Simple
cabal-version:       >=1.10

tested-with:         GHC == 8.8.3, GHC == 8.10.4, GHC == 9.0.1

source-repository head
  type: git
  location: git://github.com/himura/twitter-types.git

library
  ghc-options: -Wall

  exposed-modules:
    Web.Twitter.Types.Lens
  other-modules:
    Web.Twitter.Types.Lens.TH

  build-depends:
      base >= 4 && < 5
    , lens >= 4.0
    , template-haskell
    , text
    , time
    , twitter-types >= 0.10 && < 0.11

  default-language:    Haskell2010
