cabal-version: >=1.10
name:          twitter-types-lens
version:       0.11.0
license:       BSD3
license-file:  LICENSE
maintainer:    taka@himura.jp
author:        Takahiro HIMURA
tested-with:   ghc ==8.8.4 ghc ==8.10.4 ghc ==9.0.1
homepage:      https://github.com/himura/twitter-types
synopsis:      Twitter JSON types (lens powered)
description:
    Please see the README on Github at <https://github.com/himura/twitter-types#readme>

category:      Web
build-type:    Simple

source-repository head
    type:     git
    location: git://github.com/himura/twitter-types.git

library
    exposed-modules:  Web.Twitter.Types.Lens
    other-modules:    Web.Twitter.Types.Lens.TH
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4 && <5,
        lens >=4.0,
        template-haskell,
        text,
        time,
        twitter-types >=0.11 && <0.12
