name:              twitter-types
version:           0.7.2.2
license:           BSD3
license-file:      LICENSE
author:            Takahiro HIMURA
maintainer:        Takahiro HIMURA <taka@himura.jp>
synopsis:          Twitter JSON parser and types
description:       This package uses enumerator package for access Twitter API.
category:          Web
stability:         Experimental
build-type:        Simple
cabal-version:     >= 1.10
homepage:          https://github.com/himura/twitter-types

tested-with:       GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5

extra-source-files:
  README.md
  tests/fixtures/*.json

source-repository head
  type: git
  location: git://github.com/himura/twitter-types.git

library
  ghc-options: -Wall

  build-depends:
      base >= 4.9 && < 5
    , aeson >= 0.3.2.2
    , text
    , time >= 1.5
    , unordered-containers

  exposed-modules:
    Web.Twitter.Types

  default-language:    Haskell2010

test-suite tests
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  main-is:           TypesTest.hs
  build-depends:
      base >= 4.9 && < 5
    , twitter-types
    , HUnit
    , QuickCheck
    , aeson
    , attoparsec
    , bytestring
    , derive
    , directory
    , filepath
    , template-haskell
    , test-framework >= 0.3.3
    , test-framework-hunit
    , test-framework-quickcheck2
    , text
    , time
    , unordered-containers
  other-modules:
    Fixtures
    Instances

  ghc-options:       -Wall
  default-language:    Haskell2010
