name:              twitter-types
version:           0.9.0
license:           BSD3
license-file:      LICENSE
author:            Takahiro HIMURA
maintainer:        Takahiro HIMURA <taka@himura.jp>
synopsis:          Twitter JSON parser and types
description:       Please see the README on Github at <https://github.com/himura/twitter-types#readme>
category:          Web
stability:         Experimental
build-type:        Simple
cabal-version:     >= 1.10
homepage:          https://github.com/himura/twitter-types

tested-with:       GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5

extra-source-files:
  README.md
  tests/fixtures/*.json

source-repository head
  type: git
  location: git://github.com/himura/twitter-types.git

library
  ghc-options: -Wall

  build-depends:
      base >= 4.9 && < 5
    , aeson >= 0.3.2.2
    , text
    , time >= 1.5
    , unordered-containers

  exposed-modules:
    Web.Twitter.Types

  default-language:    Haskell2010

test-suite tests
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  main-is:           spec_main.hs
  build-depends:
      base >= 4.9 && < 5
    , twitter-types
    , aeson
    , attoparsec
    , bytestring
    , generic-random
    , directory
    , filepath
    , tasty >= 0.7
    , tasty-hunit
    , tasty-quickcheck
    , tasty-th
    , text
    , time
    , unordered-containers
  other-modules:
    Fixtures
    Instances
    PropFromToJSONTest
    TypesTest

  ghc-options:       -Wall
  default-language:    Haskell2010
